--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -71,6 +71,11 @@
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <animations/>
                                             </imageView>
+                                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="center" image="list_icon" id="D3Q-ls-4D2">
+                                                <rect key="frame" x="130" y="37" width="35" height="35"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <animations/>
+                                            </imageView>
                                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="archive_icon" id="ZEv-Ey-WcG">
                                                 <rect key="frame" x="8" y="34" width="35" height="35"/>
                                                 <autoresizingMask key="autoresizingMask"/>
@@ -97,6 +102,11 @@
                                 <autoresizingMask key="autoresizingMask"/>
                                 <animations/>
                             </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" image="list" id="aqc-v5-QwT">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <animations/>
+                            </imageView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -106,6 +116,8 @@
                     <connections>
                         <outlet property="containerMessageView" destination="CZw-c8-Soy" id="X2Q-xM-KUG"/>
                         <outlet property="laterUIImageView" destination="h1H-O6-iwY" id="n5I-nK-Bkj"/>
+                        <outlet property="listImageView" destination="aqc-v5-QwT" id="Y2q-JZ-WQB"/>
+                        <outlet property="listiconImageView" destination="D3Q-ls-4D2" id="XhF-wa-geR"/>
                         <outlet property="mailScrollView" destination="BEA-gB-PDY" id="fCr-YX-rrP"/>
                         <outlet property="rescheduleImageView" destination="x7D-r0-13d" id="XSy-eu-YLL"/>
                         <outlet property="singleMessageUIView" destination="cfk-Vb-iVp" id="Tr2-iN-gZD"/>
@@ -124,6 +136,8 @@
         <image name="help_label" width="320" height="37"/>
         <image name="later_icon" width="25" height="25"/>
         <image name="later_nav_icon" width="25" height="20"/>
+        <image name="list" width="320" height="568"/>
+        <image name="list_icon" width="25" height="25"/>
         <image name="mail_nav_icon" width="25" height="20"/>
         <image name="message" width="320" height="86"/>
         <image name="nav" width="320" height="65"/>
